<resources>
    <string name="app_name">WeatherApp</string>
    <string name="temp_unit">"°"</string>
    <string name="city_name_hint">Enter City Name</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_label">Sunset</string>
    <string name="wind_label">Wind</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="visibility_label">Visibility</string>


</resources>