<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.weatherapp.viewmodel.WeatherInfoViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/weather_info_background"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/sunrise_label"
                app:drawableStartCompat="@drawable/sunrise_ic" />

            <TextView
                android:id="@+id/tv_sunrise"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/sunset_label"
                app:drawableStartCompat="@drawable/sunset" />

            <TextView
                android:id="@+id/tv_sunset"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                 />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/wind_label"
                app:drawableStartCompat="@drawable/wind" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/humidity_label"
                app:drawableStartCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/pressure_label"
                app:drawableStartCompat="@drawable/pressure" />

            <TextView
                android:id="@+id/tv_pressure"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                 />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <TextView
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/visibility"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/visibility_label" />

            <TextView
                android:id="@+id/tv_visibility"
                style="@style/H4MobileCenterGreyBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

    </LinearLayout>
</layout>